kubernetes_manifiest_files/2 ConfigMaps-Secrets-VolumnMounts-Accessing_these_values/deploy_cm.yml
#The below image is create for testing purpose,  anyone can use it
#krishnabelamkonda/test-repo:k8s_github

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask
        image: krishnabelamkonda/test-repo:k8s_github
        ports:
        - containerPort: 5000
