kubernetes_manifiest_files/2 ConfigMaps-Secrets-VolumnMounts-Accessing_these_values/pod_with_cm.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod-cm  #cm-configmaps
spec:
  containers:
    - name: flask-app
      image: krishnabelamkonda/test-repo:k8s_github
      ports:
      - containerPort: 5000
