kubernetes_manifiest_files/2 ConfigMaps-Secrets-VolumnMounts-Accessing_these_values/pod_with_secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod-vm-secrets #cm-configmaps
  namespace : gopi
spec:
  containers:
    - name: flask-app
      image: krishnabelamkonda/test-repo:k8s_github
      ports:
      - containerPort: 5000
      volumeMounts:
        - name: secret-volume
          mountPath: "/secret"
          readOnly: true
  volumes:
  - name: secret-volume  # volume name
    secret:
      secretName: db-secrets  # name of the secret file
