kubernetes_manifiest_files/2 ConfigMaps-Secrets-VolumnMounts-Accessing_these_values/pod_with_volumn_mounts.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod-vm-cm #cm-configmaps
spec:
  containers:
    - name: flask-app
      image: krishnabelamkonda/test-repo:k8s_github
      ports:
      - containerPort: 5000
      volumeMounts:
        - name: db-configs-volume
          mountPath: "/config"
          readOnly: true
  volumes:
  - name: db-configs-volume  # volume name
    configMap:
      name: db-configs  # name of the ConfigMap file
